docs/pss-inventory/retrieved-mdapi/unpackaged/objects/sfsp__SalesMilestone__c.object
<CustomObject>
    <fields>
        <fullName>sfsp__CompletedDate__c</fullName>
        <label>Completed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>sfsp__Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>sfsp__DueDate__c</fullName>
        <label>Due Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>sfsp__Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Sales Milestones</relationshipLabel>
        <relationshipName>SalesMilestones</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sfsp__Segment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Segment</label>
        <referenceTo>sfsp__SalesNode__c</referenceTo>
        <relationshipLabel>Sales Node Milestones</relationshipLabel>
        <relationshipName>SalesNodeMilestones</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sfsp__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Deleted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Sales Milestone</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Milestones</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>